# MangroveMarkets

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  secret-template.json  status-report.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-review-agent.md  dex-agent.md  infra-agent.md  integration-agent.md  marketplace-agent.md  (+6 more)
.github/: pull_request_template.md
app-template/: .dockerignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml
app-template/app/: app.py  pyproject.toml  requirements.txt
app-template/app/app_core/: config.py  health.py
app-template/app/app_core/config/: configuration-keys.json  dev-config.json  local-example-config.json  prod-config.json  test-config.json
app-template/app/app_core/routes/: hello_routes.py
app-template/app/app_core/services/: hello_service.py
app-template/app/app_core/utils/: db_exceptions.py  db_utils.py  gcp_secret_utils.py
app-template/app/app_core/utils/auth/: jwt_service.py  middleware.py
branding/: Mangrove-Horiz-FullColor-WhiteType.eps  Mangrove-Horiz-FullColor.eps  Mangrove-M-Full.eps  Mangrove-Stacked-FullColor-WhiteType.eps  Mangrove-Stacked-FullColor.eps
docs/: brand-guidelines.md  conventions.md  dex.md  domain-setup.md  gcp-secrets-implementation.md  gcp-secrets-quick-reference.md  gcp-secrets.md  implementation-plan.md  specification.md  vision.md
examples/: gcp_secrets_example.py
infra/: verify-project-flags.sh
plans/: app-build-plan.md
src/: app.py
tests/: conftest.py
(+71 files in other folders)
